# compress-env

./: .gitignore  Cargo.toml  LICENSE  README.md  main
src/: main.rs
src/utils/: compress.rs  help.rs  mod.rs  restore.rs
src/utils/hash/: decode.rs  encode.rs
